--- a/docs/en-gb/modules/markets/partials/mirakl-data-attribute-tool.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-data-attribute-tool.adoc
@@ -2,8 +2,10 @@ With the attribute help tool, you can search for different attributes and take a
 
 You can find the attribute help tool under the URL `domain/marketplace_extension/attribute_values`.
 Replace `domain` with your plentymarkets domain. +
-* *_Example:_* For the plentymarkets domain `https:://www.my-plenty-domain.com` the URL would be `https://www.my-plenty-domain.com/{market}_extension/attribute_values`. +
-  *_Troubleshooting:_* You cannot access the attribute help tool and see the message *Your plentymarkets store is currently under construction* instead? Your plentyShop is probably locked. Go to *Setup » Client » Standard » Online store » Lock store* to unlock your plentyShop. Do not forget to lock your plentyShop once you are done.
+
+*_Example:_* For the plentymarkets domain `https:://www.my-plenty-domain.com` the URL would be `https://www.my-plenty-domain.com/{market}_extension/attribute_values`. +
+
+*_Troubleshooting:_* You cannot access the attribute help tool and see the message *Your plentymarkets store is currently under construction* instead? Your plentyShop is probably locked. Go to *Setup » Client » Standard » Online store » Lock store* to unlock your plentyShop. Do not forget to lock your plentyShop once you are done.
 
 *_Tip:_* +
 Enter `SAP.TaxIndicator` into the search field of the attribute help tool to find the valid values for *VAT class*. +
