--- a/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
@@ -4,6 +4,10 @@
 :id: 5EKUCA2
 :author: team-stock
 
+////
+zuletzt bearbeitet 08.07.2022
+////
+
 Auf dieser Seite werden die Einstellungs- und Bearbeitungsmöglichkeiten für Lager beschrieben.
 Du erfährst, wie du ein neues Lager anlegst, um in deinem plentymarkets System dein Lager 1:1 nachzubilden.
 Außerdem lernst du, wie du Box-Regale als Zwischenlager für xref:glossar:glossar.adoc#sammelkommissionierung[Sammelkommissionierungen] erstellst.
@@ -18,13 +22,8 @@ Nimm dir also vorab genügend Zeit, um dein Lager sinnvoll und wegeoptimiert abz
 Jedes plentymarkets System hat zu Beginn 2 Beispiellager: ein Vertriebslager (KS Sales) und ein zugehöriges Reparaturlager (KS Repair). Diese Lager kannst du umbenennen und weiter nutzen oder löschen und eigene Lager anlegen. Du benötigst mindestens ein Lager in deinem System, um Wareneingänge zu buchen und Bestände zu pflegen. Ohne ein Lager kannst du also keine Bestände verwalten. Eingehende Aufträge werden je nach Artikelverfügbarkeit einem Lager zugeordnet.
 ====
 
-[discrete]
-==== Rechte für Backend-Benutzer:innen vergeben
-
-:rights-purpose: mit Lagern arbeiten können
-:right-one: pass:quotes[*Warenbestände > Lager > Bearbeiten*]
-
-include::_includes:partial$rights.adoc[]
+Nachdem dein Lager fertig angelegt ist, wirst du deine Varianten einem Lagerort zuordnen und den ersten Wareneingang für eine Variante buchen.
+Somit wird auch Bestand im System vorhanden sein.
 
 [#100]
 == Lager planen
@@ -37,14 +36,12 @@ Lager werden aus Dimensionen, wie z.B. Hallen, Regalen und Böden, aufgebaut. Al
 In jedem Lager, egal ob Beispiellager oder neu erstelltes Lager, werden dir im Layout 2 Beispieldimensionen angezeigt. Diese Dimensionen sind nicht gespeichert. Du kannst die Dimensionen übernehmen, umbenennen oder entfernen. Zum Erstellen von Lagerorten benötigst du jedoch mindestens eine Dimension.
 ====
 
-[[tabelle-Einteilung-Lager]]
-.Einteilung eines Lagers
 [cols="1,3"]
 |===
-|Einstellung|Erläuterung
 
 | *Dimension*
 |Dimensionen bilden die grundsätzlichen Einteilungselemente deines Lagers. Aus den Dimensionen ergeben sich später die tatsächlichen Ebenen eines Lagers. Ebenen sind sozusagen die konkrete Anwendung einer Dimension. Wenn du z.B. eine Lagerhalle als Dimension in deinem Layout führst, stellen die Lagerhalle 1, Lagerhalle 2 und Lagerhalle 3 die konkrete Anwendung dar. +
+
 *_Hinweis:_* Mindestens eine Dimension wird benötigt, um Lagerorte zu generieren.
 
 | *Lagerort*
@@ -54,98 +51,212 @@ In jedem Lager, egal ob Beispiellager oder neu erstelltes Lager, werden dir im L
 Eine wegeoptimierte Pickliste ergibt sich durch die Position der Lagerorte. Ob eine Dimension die Position von Lagerorten beeinflusst, bestimmst du durch deine Einstellung. Eine Pickliste beginnt mit der niedrigsten Position und wird aufsteigend sortiert.
 
 [#200]
-== Lager einrichten
+== Neues Lager anlegen
 
-Das Einrichten eines Lagers gliedert sich in 3 grundsätzliche Schritte. Zunächst gibst du allgemeine Daten wie den Namen und Zweck des Lagers an. Anschließend pflegst du weitere allgemeine Daten, wie die Adresse des Lagers, ein. Im 2. Schritt richtest du Dimensionen ein, in die du dein Lager unterteilen möchtest. Im letzten Schritt generierst du schließlich deine Lagerorte.
+//Das Einrichten eines Lagers gliedert sich in 3 grundsätzliche Schritte. Zunächst gibst du allgemeine Daten wie den Namen und Zweck des Lagers an. Anschließend pflegst du weitere allgemeine Daten, wie die Adresse des Lagers, ein. Im 2. Schritt richtest du Dimensionen ein, in die du dein Lager unterteilen möchtest. Im letzten Schritt generierst du schließlich deine Lagerorte.
+
+. Öffne das Menü *Einrichtung » Waren » Lager*.
+. Klicke auf icon:plus[role="darkGrey"] *Neues Lager*.
+. Passe die Einstellungen an deine Bedürfnisse an.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
+
+[cols="1,4a"]
+|===
+|Einstellung |Erläuterung
+
+| *Name*
+|Gib einen eindeutigen Namen für das Lager ein.
+
+*_Hinweis_*:
+Deine Lager werden im Menü *Einrichtung » Waren » Lager* alphabetisch nach Namen sortiert.
+
+| *Lagertyp*
+|Wofür nutzt du das Lager? Wähle den passenden Typ aus der Dropdown-Liste.
+
+[cols="1,4a"]
+!===
+
+! *Vertrieb*
+!Ein Standardlager.
+Hier werden Artikel gelagert, die zum Verkauf angeboten werden.
+
+*_Hinweis_*:
+Dieser Lagertyp verfügt über Automatismen, wie zum Beispiel:
+
+* zur Bestandsreservierung
+* zur Anzeige der Bestandsverfügbarkeit im Webshop
+* zum Statuswechsel bei Aufträgen
+* zur Erstellung von Picklisten und Packlisten
+* zur Berechnung des durchschnittlichen Verkaufs.
+
+Alle anderen Lagertypen verfügen nicht über diese Automatismen.
+Achte also darauf, Verkaufsware in ein Vertriebslager zu buchen.
+
+! *Reparatur*
+!Ein Lager für Retourenartikel.
+Hier werden zurückgegebenen Artikel gelagert, bis sie auf eventuelle Mängel überprüft worden sind.
+So kommen defekte Artikel nicht mit dem normalen Lagerbestand in Berührung.
+
+*_Hinweis_*:
+Sobald ein Artikel repariert oder ausgetauscht wurde, kann er wieder einem Vertriebslager zugeordnet werden.
+Dies wird durch die Einstellung xref:warenwirtschaft:lager-einrichten.adoc#200[Zugeordnetes Reparaturlager] gesteuert, die in einem weiteren Kapitel näher beschrieben wird.
+
+*_Hinweis_*:
+Der Bestand in einem Reparaturlager ist nicht in den Webshop oder auf andere Portale übertragbar.
+Der Bestand im Reparaturlager bietet eine Übersicht, ob sich Artikel noch in der Reparatur befinden.
+Der Bestand kann also nicht verkauft werden.
+
+//weitere Infos zur Einstellung ergänzen - ist aktuell recht dünn
+! *Vorrat*
+!Ein Lager für Artikel, die auf Vorrat liegen.
+
+//die auskommentierte erklärung war die ursprüngliche erklärung - die sichtbare erklärung ist meine "übersetzung" davon - schau mal im forum, handbuch, entwickler fragen ob jemand weiß wozu der typ genau verwendet wird
+! *Umschlag*
+!Ein Zwischenlager.
+Hier werden Artikel vorübergehend gelagert, während sie von einem Transportmittel auf ein anderes umgeladen werden.
+
+//Kurzfristiges Lager für die Zuordnung der Artikel zur Zieladresse bei der Umladung von einem Transportmittel auf ein anderes.
+
+//weitere Infos zur Einstellung ergänzen - ist aktuell recht dünn
+! *Verteiler*
+!Ein Auslieferungslager.
+
+//weitere Infos zur Einstellung ergänzen - ist aktuell recht dünn
+! *Sonstiges*
+!Ein Sonderlager.
+
+!===
+
+| *Logistiktyp*
+|Wer wird die Logistik für dieses Lager übernehmen?
+
+* *Eigenes Lager* = Logistik wird vom eigenen Lager übernommen.
+* *Amazon* = Artikel werden über xref:maerkte:amazon-fba-nutzen.adoc#3700[Amazon FBA Multi-Channel] vertrieben.
+* *DHL Fulfillment* = Artikel werden über xref:fulfillment:versand-vorbereiten.adoc#4800[DHL Fulfillment] vertrieben.
+
+|===
 
 [#300]
-=== Allgemeine Lagerdaten pflegen
+=== Einstellungen
 
-Egal, ob du die Beispiellager bearbeitest und zu deinen Lagern machst oder ob du neue Lager hinzufügst, die folgenden Angaben pflegst du für jedes Lager.
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Einstellungen*.
+. Passe die Einstellungen an deine Bedürfnisse an.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
 
-[.instruction]
-Neues Lager erstellen:
-
-. Öffne das Menü *Einrichtung » Waren » Lager*.
-. Klicke auf icon:plus[role="darkGrey"] *Neues Lager*. +
-→ Die Ansicht zum Erstellen eines Lagers wird geöffnet.
-. Gib einen Namen ein.
-. Wähle einen *Lagertyp*.
-. Wähle einen *Logistiktyp*.
-. *Speichere* (icon:save[role="green"]) die Einstellungen, um das Lager anzulegen. +
-→ Die Einstellungen des Lagers, in denen du weitere allgemeine Daten pflegen kannst, werden geöffnet.
-
-Das neue Lager wird alphabetisch in die Liste der Lager einsortiert.
-Um weitere Daten für dein Lager zu hinterlegen, gehe vor wie folgt.
-
-[.instruction]
-Allgemeine Lagerdaten pflegen:
-
-. Öffne das Menü *Einrichtung » Waren » Lager*.
-. Wähle ein Lager.
-. Klicke auf *Einstellungen*.
-. Nimm die Einstellungen anhand <<tabelle-allgemeine-Lagerdaten>> vor.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[[tabelle-allgemeine-Lagerdaten]]
-.Allgemeine Lagerdaten
-[cols="1,2"]
+[cols="1,4a"]
 |===
 |Einstellung |Erläuterung
 
 | *Lager-ID*
-|ID des Lagers. Diese wird automatisch durch das System vergeben und ist nicht änderbar.
+|Sobald du das Lager angelegt hast, erhält es automatisch eine fortlaufende und einzigartige ID.
+Die ID kann nicht geändert werden.
 
 | *Lagername*
-|Name des Lagers.
+|Der Name, den du beim Anlegen des Lagers gewählt hast.
+Du kannst den Namen hier bei Bedarf ändern.
+
+*_Hinweis_*:
+Deine Lager werden im Menü *Einrichtung » Waren » Lager* alphabetisch nach Namen sortiert.
 
 | *Lagertyp*
-|Typ nach Zweck des Lagers wählen: +
-*Vertrieb* = Standardlager; Lager für den Verkauf mit den entsprechenden Automatismen wie Bestandsreservierung und Statuswechsel bei Aufträgen.  +
-*Reparatur* = Lager für Retourenartikel. Dieses Lager ist für Lager des Typs *Vertrieb* als *Zugeordnetes Reparaturlager* wählbar.  +
-*Vorrat* = Lager für Artikel, die auf Vorrat liegen. +
-*Umschlag* = Kurzfristiges Lager für die Zuordnung der Artikel zur Zieladresse bei der Umladung von einem Transportmittel auf ein anderes.  +
-*Verteiler* = Auslieferungslager +
-*Sonstiges* = Sonderlager
+|Der Lagertyp, den du beim Anlegen des Lagers gewählt hast.
+Du kannst den Typ hier bei Bedarf ändern.
+xref:warenwirtschaft:lager-einrichten.adoc#200[Weitere Informationen zur Einstellung].
 
 | *Logistiktyp*
-|Art der Lagerverwaltung  +
-*Eigenes Lager* = Logistik wird vom eigenen Lager verwaltet.  +
-*Amazon* = Artikel werden über xref:maerkte:amazon-fba-nutzen.adoc#3700[Amazon FBA Multi-Channel] vertrieben.  +
-*DHL Fulfillment* = Artikel werden über xref:fulfillment:versand-vorbereiten.adoc#4800[DHL Fulfillment] vertrieben.
+|Der Logistiktyp, den du beim Anlegen des Lagers gewählt hast.
+Du kannst den Typ hier bei Bedarf ändern.
+xref:warenwirtschaft:lager-einrichten.adoc#200[Weitere Informationen zur Einstellung].
 
 | *Zugeordnetes Reparaturlager*
-|Hier sind Lager des Typs *Reparatur* wählbar. Damit wird einem Lager ein Reparaturlager zugeordnet, in dem z.B. *Retouren* zur Reparatur eingelagert werden. So kommen defekte Artikel nicht mit dem normalen Lagerbestand in Berührung. Wenn die Artikel repariert oder ausgetauscht wurden, ordne sie wieder dem Vertriebslager zu.  +
-Der Bestand in einem Reparaturlager ist nicht in den Webshop oder auf andere Portale übertragbar. Der Bestand im Reparaturlager bietet eine Übersicht, ob sich Artikel noch in der Reparatur befinden. Der Bestand kann also nicht verkauft werden. +
-Lege das gewünschte Reparaturlager an, damit es in dieser Dropdown-Liste verfügbar ist.
+|Lege mit dieser Einstellung fest, welches Reparaturlager zu einem Vertriebslager passt.
 
+*_Hintergrund-Info_*:
+Retournierte Artikel werden üblicherweise in einem Reparaturlager aufbewahrt, bis sie auf eventuelle Mängel überprüft worden sind.
+So kommen defekte Artikel nicht mit dem normalen Lagerbestand in Berührung.
+Sobald ein Artikel repariert oder ausgetauscht wurde, kann er wieder einem Vertriebslager zugeordnet werden.
+
+*_Hinweis_*:
+Diese Dropdown-Liste enthält nur Lager des Typs *Reparatur*.
+Das heißt, du gehst wie folgt vor:
+
+. Öffne die Lagereinstellungen für ein Vertriebslager.
+. Wähle das passende Reparaturlager aus der Dropdown-Liste.
+
+//warum soll man die Priorität wählen - also was für eine Auswirkung hat es?
 | *Priorität*
-|Hier kannst du die Priorität für das Lager festlegen - von *pass:[+]* (niedrigste Priorität) bis *pass:[+++++]* (höchste Priorität).
+|Wähle die Priorität des Lagers: +
+*pass:[+]* (niedrigste Priorität) +
+*pass:[+++++]* (höchste Priorität)
 
+//diese Option nochmal besser erklären
 | *Nach Versandprofil splitten*
-|Hier kannst du einstellen, ob du nach xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofil] splitten möchtest. Diese Option sollte z.B. für die Erzeugung von xref:auftraege:auftraege-verwalten.adoc#300[Lieferaufträgen] auf *Ja* gestellt werden, wenn damit gearbeitet wird.
+|Möchtest du nach xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofil] splitten?
+Wenn du zum Beispiel mit xref:auftraege:auftraege-verwalten.adoc#300[Lieferaufträgen] arbeitest, sollte diese Option auf *Ja* gesetzt werden.
 
 | *Standort*
-|Standort des Lagers.  +
-Hier stehen die Länder zur Auswahl, die als Lieferländer unter xref:fulfillment:versand-vorbereiten.adoc#100[Einrichtung » Aufträge » Versand » Optionen » Tab: Lieferländer] eingerichtet wurden.
+|Wo befindet sich das Lager?
+Wähle das Land aus der Dropdown-Liste aus.
+
+*_Hinweis_*:
+Hier stehen die Länder zur Auswahl, die als Lieferländer unter xref:fulfillment:versand-vorbereiten.adoc#100[Einrichtung » Aufträge » Versand » Optionen » Tab: Lieferländer] aktiviert wurden.
+
+| *Straße* +
+*Hausnummer* +
+*Postleitzahl* +
+*Stadt* +
+*Telefon* +
+*Fax* +
+*E-Mail*
+|Wo befindet sich das Lager?
+Gib die Kontaktdaten in diese Felder ein.
 
 | *Standard-Lagerort-Typ*
-|Der Standard-Lagerort-Typ, der bei Lagereinstellungen, z.B. im Tab *Lager* der Artikeleinstellung, automatisch vorausgewählt sein soll.
+|Welche Lagerortgröße ist am häufigsten im Lager zu finden?
+Wähle diesen Typ aus der Dropdown-Liste, damit er in diversen Menüs vorausgewählt wird.
+Zum Beispiel im Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Lager*.
 
+//überarbeiten
 |[[Meldebestand_Variante_Lager]]*Dynamischer Meldebestand*
-|Wähle zwischen aktiv und inaktiv. +
-*Aktiv* = Die Differenz zum Meldebestand, MeldΔ, wird für Varianten in diesem Lager basierend auf dem dynamischen Meldebestand berechnet. Der dynamische Meldebestand selbst wird dir im System noch nicht angezeigt. +
-*_Hinweis:_* Damit für eine Variante die Differenz zum Meldebestand basierend auf dem dynamischen Meldebestand berechnet wird, muss der Meldebestand für das Lager 0 sein. +
-*Inaktiv* = Die Differenz zum Meldebestand wird für Varianten in diesem Lager nicht basierend auf dem dynamischen Meldebestand berechnet, sondern basierend auf dem eingetragenen Meldebestand. Du kannst also einen Meldebestand für die Variante eingeben, der größer als 0 ist.
+|
+
+[cols="1,4a"]
+!===
+
+! *Aktiv*
+!Die Differenz zum Meldebestand wird für Varianten in diesem Lager basierend auf dem dynamischen Meldebestand berechnet.
+Der dynamische Meldebestand selbst wird dir im System noch nicht angezeigt.
+
+*_Hinweis:_* Damit für eine Variante die Differenz zum Meldebestand basierend auf dem dynamischen Meldebestand berechnet wird, muss der Meldebestand für das Lager 0 sein.
+
+! *Inaktiv*
+!Die Differenz zum Meldebestand wird für Varianten in diesem Lager nicht basierend auf dem dynamischen Meldebestand berechnet, sondern basierend auf dem eingetragenen Meldebestand.
+Du kannst also einen Meldebestand für die Variante eingeben, der größer als 0 ist.
+
+!===
 
 | *Durchschnittspreis*
-|Wähle, wie der Durchschnittspreis für das Lager bestimmt wird. +
-*EK der Mengen im Bestand* = Der Durchschnittseinkaufspreis für Varianten in diesem Lager beruht auf den Einkaufspreisen der vorhandenen Bestandsmenge. Er wird bei jedem Wareneingang und Warenausgang neu berechnet. Diese Berechnungsmethode heißt Livedurchschnittsberechnung. +
-*EK der Varianten* = Als Durchschnittseinkaufspreis für Varianten in diesem Lager wird der Einkaufspreis aus den Variantendaten übernommen. +
-*Gleitender Durchschnittspreis der Variante* = Der Durchschnittseinkaufspreis für Varianten in diesem Lager wird gleitend berechnet. In diesem Fall wird der Einkaufspreis bei jedem Wareneingang berechnet, jedoch nicht bei Warenausgang. +
+|Wie soll der Durchschnittspreis für das Lager bestimmt werden?
 Eine ausführliche Beschreibung der Berechnungsmethoden findest du auf der Seite xref:warenwirtschaft:wareneingaenge-verwalten.adoc#250[Ware einbuchen].
 
-| *Verfügbarkeit mit Bestand* und +
+[cols="1,4a"]
+!===
+
+! *EK der Mengen im Bestand*
+!Der Durchschnittseinkaufspreis für Varianten in diesem Lager beruht auf den Einkaufspreisen der vorhandenen Bestandsmenge.
+Er wird bei jedem Wareneingang und Warenausgang neu berechnet.
+Diese Berechnungsmethode heißt Livedurchschnittsberechnung.
+
+! *EK der Varianten*
+!Als Durchschnittseinkaufspreis für Varianten in diesem Lager wird der Einkaufspreis aus den Variantendaten übernommen.
+
+! *Gleitender Durchschnittspreis der Variante*
+!Der Durchschnittseinkaufspreis für Varianten in diesem Lager wird gleitend berechnet.
+In diesem Fall wird der Einkaufspreis bei jedem Wareneingang berechnet, jedoch nicht bei Warenausgang.
+
+!===
+
+| *Verfügbarkeit mit Bestand* +
  *Verfügbarkeit ohne Bestand*
 |Hiermit wird festgelegt, welche Verfügbarkeit angezeigt wird, wenn Bestand vorhanden bzw. nicht vorhanden ist. Diese Einstellung ist dominant gegenüber dem Symbol, das im Tab *Einstellungen* einer Variante für die *Verfügbarkeit* eingestellt ist. Wichtig ist jedoch, dass im Tab *Einstellungen* einer Variante die Einstellungen *Anzeige im Webshop: Automatisch verfügbar wenn Netto-WB positiv; Automatisch nicht verfügbar wenn kein Netto-WBVerfügbar* ebenfalls gewählt wurden. +
 Nach jeder Änderung muss der Warenbestand neu berechnet werden. Diese Neuberechnung erfolgt im Menü xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Waren » Warenbestände] durch einen Klick auf *Warenbestände neu berechnen*. +
@@ -162,14 +273,117 @@ Es werden die Verfügbarkeitssymbole angezeigt, die im Menü *Einrichtung » Art
 |Der xref:warenwirtschaft:inventur-vornehmen.adoc#500[Inventur-Modus] friert den Warenbestand des Lagers für die Dauer der Inventur ein.
 |===
 
+[#800]
+=== Label
+
+Um Waren beim Einlagern schnell auf einen Lagerort zu buchen, ist es hilfreich, die Waren und den Lagerort zu scannen. Versehe hierfür deine Lagerorte mit scanbaren Labels. Bild 1 zeigt z.B. die Einstellungen für ein seitenbreites Label:
+
+.Label erstellen
+image::warenwirtschaft:label-einstellungen.png[]
+
+[.instruction]
+Labels für Lagerorte erstellen:
+
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Untermenü: Label*.
+. Nimm die Einstellungen vor.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen. +
+→ Das Label wird erstellt.
+
 [TIP]
-.Automatismen nur für Lagertyp Vertriebslager
+.Nullpunkt des Koordinatensystems
 ====
-Lediglich der Lagertyp *Vertriebslager* verfügt über Automatismen, wie z.B. zur Bestandsreservierung, zur Anzeige der Bestandsverfügbarkeit im Webshop, zum Statuswechsel bei Aufträgen, zur Erstellung von Picklisten und Packlisten sowie zur Berechnung des durchschnittlichen Verkaufs. Alle anderen Lagertypen verfügen nicht über diese Automatismen. Achte also darauf, Verkaufsware in ein Vertriebslager zu buchen.
+Der Nullpunkt des Koordinatensystems liegt oben links. Die X-Achse verläuft von links nach rechts und die Y-Achse von oben nach unten.
+
+Experimentiere mit den Einstellungen, bis das Label deinen Vorstellungen entspricht.
 ====
 
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Seite*
+|Gib die Breite und Höhe (in mm) des Papierformats ein, das für den Druck genutzt wird.
+
+| *Seitenrand*
+|Gib die Maße der Seitenränder ein. Diese bestimmen den Nullpunkt für die Platzierung der Labels auf der Seite.
+
+| *Label*
+|Gib die Breite und Höhe (in mm) des Lagerortlabels ein.
+
+|*Zeichensatz*
+|Wähle einen Zeichensatz aus der Dropdown-Liste.
+
+| *Rahmen zeichnen*
+|Aktiviere die Checkbox, um das Label einzurahmen.
+
+| *Zeilen pro Seite*
+|Gib die Anzahl der Zeilen pro Seite ein, die gedruckt werden sollen. Die Anzahl bestimmt, wie viele Labels auf einer Seite untereinander dargestellt werden. Die Höhe der Labels hat zusätzlich Einfluss auf die Anzahl, die untereinander dargestellt werden kann.
+
+| *Zeilenabstand*
+|Gib den Zeilenabstand (in mm) ein. Dieser bestimmt den Abstand zwischen den untereinander angeordneten Labels.
+
+| *Spalten pro Zeile*
+|Gib die Anzahl der Spalten pro Zeile ein, die gedruckt werden sollen. Die Anzahl bestimmt, wie viele Labels nebeneinander dargestellt werden. Achte darauf, dass die Breite der Labels zulässt, dass die Labels entsprechend der Anzahl nebeneinander dargestellt werden.
+
+| *Spaltenabstand*
+|Gib den Spaltenabstand ein. Dieser bestimmt den Abstand zwischen nebeneinander angeordneten Labels.
+
+| *Lagerort-Name*
+|Gib die Koordinaten für den Druck des Lagerort-Namens ein.
+
+| *Lagerort-ID*
+|Gib die Koordinaten für den Druck der Lagerort-ID ein.
+
+| *Lagerort-Position*
+|Gib die Koordinaten für den Druck der Lagerort-Position ein.
+
+|*Lagerort-Dimensionen*
+|Gib die Koordinaten für den Druck der Dimensionen des Lagers ein. Dies kann z.B. der Name des Regalbodens oder der Name des Regals sein.
+
+| *Barcode Lagerort*
+|Gib die Koordinaten für den Druck des Lagerort-Barcodes sowie die Breite und Höhe in mm ein. +
+Mit der Einstellung *Darstellung Wert* kann der Barcode zusätzlich als alphanumerische Zeichenfolge dargestellt werden. +
+*unterhalb* = Die Zeichenkette wird unterhalb des Barcodes dargestellt. +
+*innerhalb* = Die Zeichenkette wird innerhalb des Barcodes dargestellt. +
+*nicht anzeigen* = Die Zeichenkette wird nicht dargestellt.
+|===
+
+[#700]
+=== Box-Regale
+
+Box-Regale dienen als Zwischenlager für xref:glossar:glossar.adoc#sammelkommissionierung[Sammelkommissionierungen]. Box-Regale stehen nur in xref:automatisierung:aktionen.adoc#140[Prozessen] zur Verfügung.
+
+[TIP]
+.Maximale Boxenanzahl
+====
+Du kannst maximal 100 Boxen pro Box-Regal einrichten.
+====
+
+[.instruction]
+Box-Regal einrichten:
+
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Untermenü: Box-Regale*.
+. Klicke auf *Neues Box-Regal*.
+. Nimm die Einstellungen vor.
+. *Speichere* (terra:save[role="green"]) die Einstellungen. +
+→ Das Box-Regal wird angelegt.
+
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Bezeichnung*
+|Gib einen Namen für das Box-Regal ein.
+
+| *Start-Box*
+|Gib die Startnummer der ersten Box des Box-Regals ein.
+
+| *End-Box*
+|Gib die abschließende Nummer der letzten Box des Box-Regals ein.
+|===
+
 [#400]
-=== Dimensionen erstellen
+=== Dimensionen
 
 Richte Dimensionen ein, um dein Lager grundlegend in Elemente zu gliedern. Mindestens eine Dimension wird zum Generieren von Lagerorten benötigt. Diese Dimension kann z.B. eine Halle sein. Du kannst bis zu 10 Dimensionen für jedes Lager erstellen. Aus den Dimensionen ergeben sich dann die Ebenen eines Lagers. +
 Überlege vorab, welche Dimensionen du erstellen möchtest und beginne beim Anlegen mit der kleinsten bzw. spezifischsten Dimension (z.B. Regalboden). Diese wird dann das höchste Level erhalten (z.B. bei 4 erstellten Dimensionen Level 4). Beachte also, dass die Dimension mit dem höchsten Level die kleinste Dimension im Lager sein wird. Erstelle die Dimensionen deshalb der Größe nach aufsteigend (z.B. Regalboden (Level 4) > Regal (Level 3) > Zone (Level 2) > Lagerhalle (Level 1)).
@@ -189,10 +403,10 @@ Dimension erstellen:
 . Klicke auf *Dimensionen*. +
 → Die Übersicht wird geöffnet.
 . Gib einen Namen für die Dimension ein.
-. Nimm weitere optionale Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-einstellungen-dimensionen>>.
+. Nimm weitere optionale Einstellungen vor.
 . Klicke am rechten Rand auf *Neue Dimension hinzufügen* (icon:add[]). +
 → Eine weitere Dimension kann nun hinzugefügt werden. Folge dazu wieder den Schritten 4 bis 6.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen. +
 → Die Dimensionen werden erstellt.
 
 Eine neue Dimension wird als größte Dimension hinzugefügt. Wenn du weitere Dimensionen hinzufügst, sind diese übergeordnet, also größer. Beginne deshalb mit der kleinsten Dimension.
@@ -203,8 +417,6 @@ Eine neue Dimension wird als größte Dimension hinzugefügt. Wenn du weitere Di
 Solange es keine Lagerorte gibt, können alle Dimensionen gelöscht werden. Bestehen Lagerorte, muss es mindestens eine Dimension geben.
 ====
 
-[[tabelle-einstellungen-dimensionen]]
-.Dimension erstellen
 [cols="1,3"]
 |===
 |Einstellung |Erläuterung
@@ -230,19 +442,9 @@ Solange es keine Lagerorte gibt, können alle Dimensionen gelöscht werden. Best
 |===
 
 [#500]
-=== Lagerorte generieren
+=== Lagerorte
 
 Generiere Lagerorte, um die tatsächlichen Plätze zum Lagern deiner Ware angeben zu können. Varianten können nur auf konkrete Lagerorte gebucht werden und nicht auf Dimensionen. Auch das Generieren vieler Lagerorte auf einmal ist ganz einfach. Sobald Lagerorte generiert sind, werden sie nach dem Laufweg sortiert.
-
-[discrete]
-==== Rechte für Backend-Benutzer:innen vergeben
-
-:rights-purpose: mit Lagerorten arbeiten können
-:right-one: pass:quotes[*Warenbestände > Lager > Lagerort > Aktualisieren*]
-:right-two: pass:quotes[*Warenbestände > Lager > Lagerort > Anzeigen*]
-:right-three: pass:quotes[*Warenbestände > Lager > Lagerort > Erstellen*]
-
-include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Lagerorte generieren:
@@ -251,15 +453,13 @@ Lagerorte generieren:
 . Wähle ein Lager.
 . Klicke auf *Lagerorte*. +
 . Klicke oben auf *Neuen Lagerort hinzufügen* (icon:add[]).
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-lagerorte-generieren>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
+. Nimm die Einstellungen vor.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen. +
 → Eine Vorschau mit Beispielen der Lagerortnamen wird angezeigt.
 . Klicke auf *Generieren*, um die Lagerorte zu generieren.
 
 Die Lagerorte werden im Hintergrund kontinuierlich generiert. Dir werden schon nach kurzer Zeit die ersten Lagerorte angezeigt, jedoch ist das Generieren noch nicht abgeschlossen. Dir wird eine Erfolgsmeldung angezeigt, wenn das Generieren vollständig abgeschlossen wurde.
 
-[[tabelle-lagerorte-generieren]]
-.Lagerorteinstellungen
 [cols="1,2"]
 |===
 |Einstellung |Erläuterung
@@ -365,11 +565,10 @@ Beachte, dass gesperrte Ware für Marktplätze weiterhin verfügbar ist.
 ====
 
 [#530]
-=== Limitierungen
+==== Limitierungen
 
 Beim Erstellen von Dimensionen und beim Generieren von Lagerorten gibt es einige Limitierungen zu beachten. Außerdem gibt es Vorgaben, welche Buchstaben- und Zahlenkombinationen zum Generieren verwendet werden können.
 
-[[tabelle-Limitierungen-Dimensionen]]
 .Limitierungen Dimensionen
 [cols="3,1"]
 |===
@@ -388,7 +587,6 @@ Beim Erstellen von Dimensionen und beim Generieren von Lagerorten gibt es einige
 |3
 |===
 
-[[tabelle-Limitierungen-Lagerorte-generieren]]
 .Limitierungen Lagerorte generieren
 [cols="3,1"]
 |===
@@ -413,7 +611,6 @@ Beim Erstellen von Dimensionen und beim Generieren von Lagerorten gibt es einige
 |500
 |===
 
-[[tabelle-Limitierungen-Buchstaben-und-Zahlenkombinationen]]
 .Buchstaben- und Zahlenkombinationen für Eingaben in den Generator
 [cols="3,1"]
 |===
@@ -439,7 +636,7 @@ Zum Beispiel kannst du bestehende Dimensionen anpassen oder neue Dimensionen hin
 === Name einer Dimension ändern
 
 . Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte*.
-. Klicke auf material:account_tree[role="blue"] *Struktur*.
+. Klicke auf material:account_tree[role="darkGrey"] *Struktur*.
 . Klicke auf die Dimension, die du ändern möchtest, zum Beispiel ein Regal, ein Regalboden oder eine Lagerort. +
 → Rechts werden Angaben zur Dimension angezeigt.
 . Ändere den Namen nach Bedarf.
@@ -449,7 +646,7 @@ Zum Beispiel kannst du bestehende Dimensionen anpassen oder neue Dimensionen hin
 === Dimension verschieben
 
 . Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte*.
-. Klicke auf material:account_tree[role="blue"] *Struktur*.
+. Klicke auf material:account_tree[role="darkGrey"] *Struktur*.
 . Klicke auf die Dimension, die du verschieben möchtest, zum Beispiel ein Regal, ein Regalboden oder eine Lagerort. +
 → Rechts werden Angaben zur Dimension angezeigt.
 . Klicke auf *Verschieben* (material:compare_arrows[role="darkGrey"]). +
@@ -489,7 +686,7 @@ Die anderen Lagerorte werden entsprechend neu positioniert.
 === Neue Dimension hinzufügen
 
 . Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte*.
-. Klicke auf material:account_tree[role="blue"] *Struktur*.
+. Klicke auf material:account_tree[role="darkGrey"] *Struktur*.
 . Navigiere zur gewünschten Ebene und klicke auf icon:plus[role="darkGrey"] *Neu [Name der Dimension]*. +
 → Rechts werden Einstellungen angezeigt.
 . Nimm die Einstellungen vor.
@@ -560,7 +757,7 @@ Beachte, dass der Status *Gesperrt in Status 4* der einzige Status mit einer bes
 === Dimension löschen
 
 . Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte*.
-. Klicke auf material:account_tree[role="blue"] *Struktur*.
+. Klicke auf material:account_tree[role="darkGrey"] *Struktur*.
 . Klicke auf die Dimension, die du löschen möchtest, zum Beispiel ein Regal, ein Regalboden oder eine Lagerort. +
 → Rechts werden Angaben zur Dimension angezeigt.
 . Klicke auf material:remove[role="darkGrey"] in der Ecke oben rechts.
@@ -621,127 +818,59 @@ Lager löschen:
 
 *_Hinweis:_* Das Löschen des Lagers löscht auch die Warenbewegungen. Sie können somit nicht wiederhergestellt werden, was nicht GoBD-konform ist.
 
-[#700]
-== Box-Regale zum Packen einrichten
-
-Box-Regale dienen als Zwischenlager für xref:glossar:glossar.adoc#sammelkommissionierung[Sammelkommissionierungen]. Box-Regale stehen nur in xref:automatisierung:aktionen.adoc#140[Prozessen] zur Verfügung.
-
-[TIP]
-.Maximale Boxenanzahl
-====
-Du kannst maximal 100 Boxen pro Box-Regal einrichten.
-====
-
-[.instruction]
-Box-Regal einrichten:
-
-. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Untermenü: Box-Regale*.
-. Klicke auf *Neues Box-Regal*.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-einstellungen-box-regale>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Das Box-Regal wird angelegt.
-
-[[tabelle-einstellungen-box-regale]]
-.Einstellungen für Box-Regale
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-| *Bezeichnung*
-|Gib einen Namen für das Box-Regal ein.
-
-| *Start-Box*
-|Gib die Startnummer der ersten Box des Box-Regals ein.
-
-| *End-Box*
-|Gib die abschließende Nummer der letzten Box des Box-Regals ein.
-|===
-
-[#800]
-== Lagerorte labeln
-
-Um Waren beim Einlagern schnell auf einen Lagerort zu buchen, ist es hilfreich, die Waren und den Lagerort zu scannen. Versehe hierfür deine Lagerorte mit scanbaren Labels. Bild 1 zeigt z.B. die Einstellungen für ein seitenbreites Label:
-
-.Label erstellen
-image::warenwirtschaft:label-einstellungen.png[]
-
-[.instruction]
-Labels für Lagerorte erstellen:
-
-. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Untermenü: Label*.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-label-einstellungen>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Das Label wird erstellt.
-
-[TIP]
-.Nullpunkt des Koordinatensystems
-====
-Der Nullpunkt des Koordinatensystems liegt oben links. Die X-Achse verläuft von links nach rechts und die Y-Achse von oben nach unten.
-
-Experimentiere mit den Einstellungen, bis das Label deinen Vorstellungen entspricht.
-====
-
-[[tabelle-label-einstellungen]]
-.Labeleinstellungen
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-| *Seite*
-|Gib die Breite und Höhe (in mm) des Papierformats ein, das für den Druck genutzt wird.
-
-| *Seitenrand*
-|Gib die Maße der Seitenränder ein. Diese bestimmen den Nullpunkt für die Platzierung der Labels auf der Seite.
-
-| *Label*
-|Gib die Breite und Höhe (in mm) des Lagerortlabels ein.
-
-|*Zeichensatz*
-|Wähle einen Zeichensatz aus der Dropdown-Liste.
-
-| *Rahmen zeichnen*
-|Aktiviere die Checkbox, um das Label einzurahmen.
-
-| *Zeilen pro Seite*
-|Gib die Anzahl der Zeilen pro Seite ein, die gedruckt werden sollen. Die Anzahl bestimmt, wie viele Labels auf einer Seite untereinander dargestellt werden. Die Höhe der Labels hat zusätzlich Einfluss auf die Anzahl, die untereinander dargestellt werden kann.
-
-| *Zeilenabstand*
-|Gib den Zeilenabstand (in mm) ein. Dieser bestimmt den Abstand zwischen den untereinander angeordneten Labels.
-
-| *Spalten pro Zeile*
-|Gib die Anzahl der Spalten pro Zeile ein, die gedruckt werden sollen. Die Anzahl bestimmt, wie viele Labels nebeneinander dargestellt werden. Achte darauf, dass die Breite der Labels zulässt, dass die Labels entsprechend der Anzahl nebeneinander dargestellt werden.
-
-| *Spaltenabstand*
-|Gib den Spaltenabstand ein. Dieser bestimmt den Abstand zwischen nebeneinander angeordneten Labels.
-
-| *Lagerort-Name*
-|Gib die Koordinaten für den Druck des Lagerort-Namens ein.
-
-| *Lagerort-ID*
-|Gib die Koordinaten für den Druck der Lagerort-ID ein.
-
-| *Lagerort-Position*
-|Gib die Koordinaten für den Druck der Lagerort-Position ein.
-
-|*Lagerort-Dimensionen*
-|Gib die Koordinaten für den Druck der Dimensionen des Lagers ein. Dies kann z.B. der Name des Regalbodens oder der Name des Regals sein.
-
-| *Barcode Lagerort*
-|Gib die Koordinaten für den Druck des Lagerort-Barcodes sowie die Breite und Höhe in mm ein. +
-Mit der Einstellung *Darstellung Wert* kann der Barcode zusätzlich als alphanumerische Zeichenfolge dargestellt werden. +
-*unterhalb* = Die Zeichenkette wird unterhalb des Barcodes dargestellt. +
-*innerhalb* = Die Zeichenkette wird innerhalb des Barcodes dargestellt. +
-*nicht anzeigen* = Die Zeichenkette wird nicht dargestellt.
-|===
-
-Nun ist dein Lager angelegt und du hast die wichtigsten Schritte erledigt. Damit auch Bestand im System vorhanden ist, ordne Varianten einem Lagerort zu und buche den ersten Wareneingang für eine Variante.
-
 [#1500]
-== FAQ
+== Fragen und Antworten
+
+[.collapseBox]
+.*Warum sehe ich das Menü nicht?*
+--
+
+Personen mit xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#10[Backend-Zugriffsrechten] können dieses Menü nur sehen, wenn ein Admin ihnen Zugriff gewährt hat.
+
+. Wende dich an eine Person mit Administratorrechten für das plentymarkets-System.
+. Diese Person öffnet das Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer*.
+. Dann öffnet sie das Benutzerkonto und schaltet die notwendigen Rechte frei.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
+. Sollte das Problem weiterhin bestehen, wende dich an die link:https://forum.plentymarkets.com/c/stock/227[Supporter im Forum^].
+
+[TIP]
+======
+Die Bereiche *Berechtigungen* und *Menü-Sichtbarkeiten* sind verknüpft. Wenn du also Rechte in einem der beiden Bereiche aktivierst, sind sie automatisch auch für den anderen Bereich aktiv.
+======
+
+[TIP]
+======
+Die folgende Liste erhebt keinen Anspruch auf Vollständigkeit. Welche Kombination von Rechten den individuellen Bedürfnissen deines Unternehmens am besten entspricht, kannst nur du entscheiden.
+======
+
+[cols="1a,1"]
+|===
+|Berechtigung |Erläuterung
+
+//Link einfügen nachdem das Kapitel zum Thema neue Lager anlegen überarbeitet wurde
+| *Warenbestände > Lager > Bearbeiten*
+|Das Recht, mit Lagern im Menü *Einrichtung » Waren » Lager* zu arbeiten.
+
+|
+* *Warenbestände > Lager > Lagerort > Aktualisieren*
+* *Warenbestände > Lager > Lagerort > Anzeigen*
+* *Warenbestände > Lager > Lagerort > Erstellen*
+* *Einrichtung > Eigenschaft > Anzeigen*
+|Das Recht, mit Lagerorten im Menü *Einrichtung » Waren » Lager » Lagerorte* zu arbeiten.
+
+|
+* *Warenbestände > Lager > Lagerort > Lagerortdimension > Aktualisieren*
+* *Warenbestände > Lager > Lagerort > Lagerortdimension > Anzeigen*
+* *Warenbestände > Lager > Lagerort > Lagerortdimension > Erstellen*
+|Das Recht, mit Dimensionen im Menü *Einrichtung » Waren » Lager » Dimensionen* zu arbeiten.
+
+|===
+
+--
 
 [#faq-ids-finden]
 [.collapseBox]
-.Wo finde ich meine Lager- und Lagerort-IDs?
+.*Wo finde ich meine Lager- und Lagerort-IDs?*
 --
 Die IDs deiner Lager findest du im Menü *Einrichtung » Waren » Lager » [Lager wählen] » Einstellungen* und die deiner Lagerorte im Menü *Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte*.
 
@@ -750,7 +879,7 @@ Die ID des Standard-Lagerorts ist 0. Der Standard-Lagerort ist jedoch nur eine A
 
 [#faq-zuordnung-lagerorte]
 [.collapseBox]
-.Wie erfolgt die Zuordnung eines Lagerortes im Auftrag?
+.*Wie erfolgt die Zuordnung eines Lagerortes im Auftrag?*
 --
 Welcher Lagerort im Auftrag zugeordnet wird, hängt zunächst vom Bestand ab. Wenn kein Bestand auf den regulären Lagerorten verfügbar ist, wird der Standard-Lagerort zugeordnet, der grundsätzlich immer als Fallback dient. +
 Die Zuordnung des Lagerortes findet in Status 5 des Auftrags automatisch statt und wird außerdem vom xref:warenwirtschaft:praxisbeispiel-lager-einrichten.adoc#40[Laufweg im Lager] beeinflusst. +
