limango partner feedback - DE+EN

--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -180,7 +180,7 @@ If you do not enter a client, the default client is used for importing orders. +
 === Activating an order referrer
 
 :referrer: limango
-:referrer-option: pass:quotes[option *limango* with the ID *16*]
+:referrer-option: pass:quotes[option *limango*]
 
 include::partial$activate-referrer.adoc[]
 
@@ -316,7 +316,7 @@ Mapping lining and saving material mix for a variation:
 . Create a property with the following settings:
 * Name: Shoes: Upper shoe materials
 * Section: Item
-* Type: Selection
+* Type: Multi selection
 * Selection values:
   ** other-material
   ** leather
@@ -331,7 +331,7 @@ Mapping lining and saving material mix for a variation:
 . Create a property with the following settings:
 * Name: Shoes: Lining shoe materials
 * Section: Item
-* Type: Selection
+* Type: Multi selection
 * Selection values:
   ** other-material
   ** leather
@@ -346,7 +346,7 @@ Mapping lining and saving material mix for a variation:
 . Create a property with the following settings:
 * Name: Shoes: Insole shoe materials
 * Section: Item
-* Type: Selection
+* Type: Multi selection
 * Selection values:
   ** other-material
   ** leather
@@ -361,7 +361,7 @@ Mapping lining and saving material mix for a variation:
 . Create a property with the following settings:
 * Name: Shoes: Outsole shoe materials
 * Section: Item
-* Type: Selection
+* Type: Multi selection
 * Selection values:
   ** other-material
   ** leather
