--- a/docs/en-gb/modules/markets/partials/limango-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/limango-recommended-mappings.adoc
@@ -144,7 +144,7 @@ etc.)
 *Shoes: Lining shoe materials*; +
 *Shoes: Insole shoe materials*; +
 *Shoes: Outsole shoe materials*)
-| * Properties linked to main variation
+| * Properties of the type *Multi selection* linked to variation
 
 *_Valid values:_*
 
