Rename customer to contact in owner's tab

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -300,7 +300,7 @@ Weitere Informationen zum Debitorenkonto findest du auf der Handbuchseite xref:a
 
 | *Eigner*
 |Wähle einen Eigner für den Kontakt. Wenn kein Eigner gewählt werden soll, wähle die leere Option. +
-*_Hinweis:_* In der Liste werden alle Benutzer:innen (Eigner) angezeigt, bei denen im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konten » [Benutzer öffnen]* im Tab *Eigner* die Option *Kunde* aktiviert ist.
+*_Hinweis:_* In der Liste werden alle Benutzer:innen (Eigner) angezeigt, bei denen im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konten » [Benutzer öffnen]* im Tab *Eigner* die Option *Kontakt* aktiviert ist.
 
 | *Handelsvertreter, der dem Kontakt zugeordnet ist*
 |Hier kannst du dem Kontakt einen Handelsvertreter zuordnen. Gib die ersten 3 Buchstaben des Namens ein, um die Vorschlagsliste der bereits in deinem System gespeicherten Handelsvertreter aufzurufen. Mit einem Klick auf die ID bzw. den Namen ist der Handelsvertreter dem Kontakt zugeordnet.
