--- a/docs/en-gb/modules/crm/pages/search-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/search-contact.adoc
@@ -63,7 +63,7 @@ Select the setting *All except Germany* to only display contacts from all countr
 
 | *Owner*
 |Select the owner to only search for contacts that are linked to this owner. The owner has to be saved in the contact data record. +
-*_Important:_* Only owners for whom the *Customer* option has been activated in the *Owner* tab of their user account can be selected from the drop-down list.
+*_Important:_* Only owners for whom the *Contact* option has been activated in the *Owner* tab of their user account can be selected from the drop-down list.
 
 | *Type*
 |Select the type to only search for contacts with this type.
