--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -63,7 +63,7 @@ Wähle die Einstellung *Alle außer Deutschland*, um nur Kontakte aus allen Län
 
 | *Eigner*
 |Wähle einen Eigner, um nur nach Kontakten zu suchen, die mit diesem Eigner verknüpft sind. Der Eigner muss in den Kontaktdaten gespeichert sein. +
-*_Wichtig:_* In der Dropdown-Liste werden nur Benutzer:innen (Eigner) angezeigt, bei denen im Benutzer:innenkonto im Tab *Eigner* die Option *Kunde* aktiviert ist.
+*_Wichtig:_* In der Dropdown-Liste werden nur Benutzer:innen (Eigner) angezeigt, bei denen im Benutzer:innenkonto im Tab *Eigner* die Option *Kontakt* aktiviert ist.
 
 | *Typ*
 |Wähle einen Typen, um nach Kontakten mit diesem Typ zu suchen.
