--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -300,7 +300,7 @@ For further information about the debtor account, refer to the xref:orders:accou
 
 | *Owner*
 |Select the owner for the contact. If you do not want to select an owner, select the empty option. +
-*_Note:_* Only owners for whom the *Customer* option has been activated in the *Owner* tab of their user account in the *Setup » Settings » User » Account » [Open user]* menu can be selected from the drop-down list.
+*_Note:_* Only owners for whom the *Contact* option has been activated in the *Owner* tab of their user account in the *Setup » Settings » User » Account » [Open user]* menu can be selected from the drop-down list.
 
 | *Sales representative that is assigned to the contact*
 |Here, you can assign a sales representative to the contact. Enter the first 3 characters of the name to see a suggestion list of all sales representatives that are already saved in your system. By clicking on the name or the ID of the sales representative, the sales representative is assigned to the contact.
