Changed variation number to variation ID

--- a/docs/en-gb/modules/data/pages/formatdesigner-active-listings.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-active-listings.adoc
@@ -79,7 +79,7 @@ Use the *Active listings* format to export active listings.
 |Date that the market listing was updated on
 
 |variationId
-|Variation number
+|Variation ID
 
 |verified
 |Status of the listing’s check
