--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -657,7 +657,10 @@ Bei Bedarf musst du dann manuell Artikel in andere plentymarkets Kategorien vers
 [#110]
 === Cron-Einstellungen
 
-Der Datenaustausch zwischen Prohandel und plentymarkets erfolgt mit Hilfe von so genannten "Crons".
+Der Datenaustausch zwischen Prohandel und plentymarkets erfolgt mit Hilfe von sogenannten Crons.
+
+include::_includes:partial$crons.adoc[]
+
 In diesem Schritt aktivierst du die Cron-Jobs, die automatisch ausgeführt werden sollen (icon:check-square[role="blue"]).
 
 [[table-cron-settings]]
