Added note about catalogue format settings

--- a/docs/de-de/modules/maerkte/partials/catalogue-assistant-config.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-assistant-config.adoc
@@ -11,6 +11,8 @@ Katalog mit dem Assistenten erstellen:
 . Öffne den Katalog im Menü *Daten » Kataloge*, um {mapping-fields} Felder zu verknüpfen. +
 *_Hinweis:_* {catalogue-note}
 
+*_Hinweis:_* Du solltest das *Format* in den *Formateinstellungen* des Katalogs nicht ändern. Beim Erstellen eines Katalogs sind alle nötigen Einstellungen bereits voreingestellt, damit der Export zum Marktplatz funktioniert. Wenn du die Einstellungen änderst, kann es zu Fehlern beim Export kommen.
+
 ////
 
 === Katalog mit dem Assistenten erstellen
