--- a/docs/en-gb/modules/markets/partials/catalogue-assistant-config.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-assistant-config.adoc
@@ -11,6 +11,8 @@ Creating a catalogue in the assistant:
 . Open the catalogue in the *Data » Catalogues* menu to map {mapping-fields} fields. +
 *_Note:_* {catalogue-note}
 
+*_Note:_* You should not change the *format* in the catalogue's *Format settings*. To ensure that the export to the market works, all required settings are already configured when you create a catalogue. If you change the settings, errors might occur during the export.
+
 ////
 
 === Creating a catalogue in the assistant
