ADD more work to the warehouse page

--- a/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
@@ -5,7 +5,7 @@
 :author: team-stock
 
 ////
-zuletzt bearbeitet 08.07.2022
+zuletzt bearbeitet 11.07.2022
 ////
 
 Auf dieser Seite werden die Einstellungs- und Bearbeitungsmöglichkeiten für Lager beschrieben.
@@ -201,12 +201,12 @@ Wähle das Land aus der Dropdown-Liste aus.
 *_Hinweis_*:
 Hier stehen die Länder zur Auswahl, die als Lieferländer unter xref:fulfillment:versand-vorbereiten.adoc#100[Einrichtung » Aufträge » Versand » Optionen » Tab: Lieferländer] aktiviert wurden.
 
-| *Straße* +
-*Hausnummer* +
-*Postleitzahl* +
-*Stadt* +
-*Telefon* +
-*Fax* +
+| *Straße*; +
+*Hausnummer*; +
+*Postleitzahl*; +
+*Stadt*; +
+*Telefon*; +
+*Fax*; +
 *E-Mail*
 |Wo befindet sich das Lager?
 Gib die Kontaktdaten in diese Felder ein.
@@ -256,15 +256,51 @@ In diesem Fall wird der Einkaufspreis bei jedem Wareneingang berechnet, jedoch n
 
 !===
 
-| *Verfügbarkeit mit Bestand* +
+| *Verfügbarkeit mit Bestand*; +
  *Verfügbarkeit ohne Bestand*
-|Hiermit wird festgelegt, welche Verfügbarkeit angezeigt wird, wenn Bestand vorhanden bzw. nicht vorhanden ist. Diese Einstellung ist dominant gegenüber dem Symbol, das im Tab *Einstellungen* einer Variante für die *Verfügbarkeit* eingestellt ist. Wichtig ist jedoch, dass im Tab *Einstellungen* einer Variante die Einstellungen *Anzeige im Webshop: Automatisch verfügbar wenn Netto-WB positiv; Automatisch nicht verfügbar wenn kein Netto-WBVerfügbar* ebenfalls gewählt wurden. +
-Nach jeder Änderung muss der Warenbestand neu berechnet werden. Diese Neuberechnung erfolgt im Menü xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Waren » Warenbestände] durch einen Klick auf *Warenbestände neu berechnen*. +
-Es werden die Verfügbarkeitssymbole angezeigt, die im Menü *Einrichtung » Artikel » Verfügbarkeit* im Bereich *Webshop-Symbol* hinterlegt sind.
+|Gib die durchschnittliche Lieferzeit deiner Varianten an.
+Dies ist die dynamische Einstellung.
+
+---
+
+*_Hintergrund-Info_*:
+In plentymarkets kann die Angabe zur Verfügbarkeit entweder statisch oder dynamisch sein.
+
+* *Statisch*: Im Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Verfügbarkeit* wählst eine Abfertigungszeit, die immer für die Variante gilt, z.B. Versand innerhalb von 3 Tagen.
+* *Dynamisch*: Hier in diesem Menü wählst eine Abfertigungszeit für den Fall, dass die Variante auf Lager ist, z.B. Versand innerhalb von 3 Tagen.
+Und du wählst eine zweite Abfertigungszeit für den Fall, dass die Variante nicht auf Lager ist, z.B. Versand innerhalb von 2 Wochen.
+
+Die dynamische Einstellung hat Vorrang vor der statischen Einstellung.
+Wenn du also in beiden Menüs eine Angabe machst, dann wird die dynamische Verfügbarkeit genommen.
+
+---
+
+Falls die Variante mehreren Lagern mit unterschiedlichen Verfügbarkeitsstufen zugeordnet ist, dann nimmt plentymarkets immer die beste Option. Beispiel: Der Artikel ist in Lager A und B verfügbar.
+
+* Lager A hat eine Verfügbarkeit von 2 Tagen.
+* Lager B hat eine Verfügbarkeit von 5 Tagen.
+
+In diesem Fall wird das Lager A verwendet, da es die bessere Verfügbarkeit bietet.
+
+---
+
+*_Zusätzliche Einstellungen_*:
+
+* In plentymarkets stehen zehn Verfügbarkeitsstufen zur Auswahl.
+Im Menü *Einrichtung » Artikel » Verfügbarkeit* legst du fest, was die einzelnen Verfügbarkeitsstufen bedeuten.
+xref:artikel:verfuegbarkeit.adoc#100[Weitere Informationen].
+* Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Verfügbarkeit* und stelle sicher, dass die Einstellungen *Anzeige im Webshop: Automatisch verfügbar, wenn Netto-WB positiv* und *Anzeige im Webshop: Automatisch nicht verfügbar, wenn kein Netto-WB* auch gewählt wurden (icon:check-square[role="blue"]).
+* Nach jeder Änderung der Verfügbarkeit muss der Warenbestand neu berechnet werden.
+Öffne dazu das Menü *Waren » Warenbestände* und klicke auf terra:execute[role="darkGrey"] *Warenbestände neu berechnen*.
 
 | *Verfügbar für Auftragsherkünfte (bei automatischer Lagerauswahl)*
-|Hier wählst du die xref:auftraege:auftragsherkunft.adoc#[Auftragsherkünfte], für die das Lager verfügbar sein soll. Geht über eine der ausgewählten Auftragsherkünfte ein Auftrag ein, wird dieses Lager bei der automatischen Lagerauswahl zugeordnet. +
-*_Wichtig:_* Die Einstellungen, die du bei der Option *Automatische Lagerauswahl* im Menü *xref:auftraege:grundeinstellungen.adoc#[Einrichtung » Aufträge » Einstellungen]* vornimmst, bauen auf dieser Einstellung auf. Das heißt, dass zuerst die aktivierte Auftragsherkunft geprüft wird und erst dann deine Einstellungen zur automatischen Lagerauswahl zum Tragen kommen.
+|Wähle die xref:auftraege:auftragsherkunft.adoc#[Auftragsherkünfte], für die das Lager verfügbar sein soll.
+Geht ein Auftrag von eine der gewählten Auftragsherkünfte ein, wird dieses Lager bei der automatischen Lagerauswahl zugeordnet.
+
+*_Hinweis_*:
+Die Einstellungen, die du im Menü *Einrichtung » Aufträge » Einstellungen » Automatische Lagerauswahl* vornimmst, bauen auf dieser Einstellung auf.
+Das heißt, dass zuerst die aktivierte Auftragsherkunft geprüft wird und erst dann deine Einstellungen zur automatischen Lagerauswahl zum Tragen kommen.
+xref:auftraege:grundeinstellungen.adoc#[Weitere Informationen].
 
 | *Notiz*
 |Hier kannst du Notizen eingeben, die du zusätzlich als Informationen zum Lager speichern möchtest.
@@ -446,13 +482,8 @@ Solange es keine Lagerorte gibt, können alle Dimensionen gelöscht werden. Best
 
 Generiere Lagerorte, um die tatsächlichen Plätze zum Lagern deiner Ware angeben zu können. Varianten können nur auf konkrete Lagerorte gebucht werden und nicht auf Dimensionen. Auch das Generieren vieler Lagerorte auf einmal ist ganz einfach. Sobald Lagerorte generiert sind, werden sie nach dem Laufweg sortiert.
 
-[.instruction]
-Lagerorte generieren:
-
-. Öffne das Menü *Einrichtung » Waren » Lager*.
-. Wähle ein Lager.
-. Klicke auf *Lagerorte*. +
-. Klicke oben auf *Neuen Lagerort hinzufügen* (icon:add[]).
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte*.
+. Klicke auf icon:plus[role="darkGrey"] *Neue Lagerorte anlegen*.
 . Nimm die Einstellungen vor.
 . *Speichere* (terra:save[role="darkGrey"]) die Einstellungen. +
 → Eine Vorschau mit Beispielen der Lagerortnamen wird angezeigt.
@@ -460,7 +491,7 @@ Lagerorte generieren:
 
 Die Lagerorte werden im Hintergrund kontinuierlich generiert. Dir werden schon nach kurzer Zeit die ersten Lagerorte angezeigt, jedoch ist das Generieren noch nicht abgeschlossen. Dir wird eine Erfolgsmeldung angezeigt, wenn das Generieren vollständig abgeschlossen wurde.
 
-[cols="1,2"]
+[cols="1,3a"]
 |===
 |Einstellung |Erläuterung
 
@@ -469,9 +500,9 @@ Die Lagerorte werden im Hintergrund kontinuierlich generiert. Dir werden schon n
 | *Präfix*
 |Das Präfix wird aus den Einstellungen der Dimensionen übernommen und kann dort eingegeben werden. Hier wird es lediglich angezeigt.
 
-| *Von* +
+| *Von*; +
 *Bis*
-a|Gib den Startwert und Endwert für die Dimension ein. Zulässig sind Buchstaben und Zahlen sowie einige Kombinationen aus Buchstaben und Zahlen. +
+|Gib den Startwert und Endwert für die Dimension ein. Zulässig sind Buchstaben und Zahlen sowie einige Kombinationen aus Buchstaben und Zahlen. +
 Beispiele für zulässige Start- und Endwerte:
 
 * 1 bis 10
@@ -498,7 +529,7 @@ Gib die Startposition ein. Nur Zahlen sind zulässig.
 | *Präfix*
 |Gib ein Präfix für Lagerorte ein. Standardmäßig ist SL (für Storage Location) voreingetragen. Das Präfix ist kein Pflichtfeld.
 
-| *Lagerorte anlegen von* +
+| *Lagerorte anlegen von*; +
 *Lagerorte anlegen bis*
 a|Gib einen Startwert und Endwert für Lagerorte ein. Zulässig sind Buchstaben und Zahlen sowie einige Kombinationen aus Buchstaben und Zahlen. +
 Beispiele für zulässige Start- und Endwerte:
