Added info & FAQ about customization

--- a/docs/de-de/modules/maerkte/partials/etsy-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/etsy-recommended-mappings.adoc
@@ -428,6 +428,8 @@ An der Hauptvariante speicherst du bis zu 13 kommaseparierte Werte. +
 ! Das Produkt ist personalisierbar.
 !===
 
+*_Hinweis:_* Die Personalisierungswünsche deiner Kund:innen werden als Auftragsnotiz in plentymarkets importiert.
+
 | Nicht steuerpflichtig +
 (non_taxable)
 | nein
