--- a/docs/en-gb/modules/markets/partials/etsy-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/etsy-recommended-mappings.adoc
@@ -428,6 +428,8 @@ You can save up to 13 values for a main variation. Separate multiple values by c
 ! The product can be customized.
 !===
 
+*_Note:_* Your customers' requests for customisation are imported as order notes.
+
 | Not taxable +
 (non_taxable)
 | no
